RESOLVED FIXED258120
[LBSE] Computation of on-screen font scaling factor ignores page zoom
https://bugs.webkit.org/show_bug.cgi?id=258120
Summary [LBSE] Computation of on-screen font scaling factor ignores page zoom
Nikolas Zimmermann
Reported 2023-06-15 04:11:41 PDT
For standalone SVG documents the page zoom has to be taken into account when computing the on-screen font scaling factor. Currently we ignore the effective zoom factor and thus select a sub-optimal font. Non-scaling-stroke (webkit.org/b/139322) works properly in LBSE, if this fix is applied as well.
Attachments
Nikolas Zimmermann
Comment 1 2023-06-15 04:18:17 PDT
EWS
Comment 2 2023-06-15 12:38:44 PDT
Committed 265208@main (988fed7a7589): <https://commits.webkit.org/265208@main> Reviewed commits have been landed. Closing PR #15000 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-15 12:39:18 PDT
Note You need to log in before you can comment on or make changes to this bug.