Source/WebCore/rendering/svg/SVGLayerTransformComputation.h
@@ -122,6 +122,8 @@ public:
 
         auto ctm = computeAccumulatedTransform(stopAtLayer ? &stopAtLayer->renderer() : nullptr, TransformState::TrackSVGScreenCTMMatrix);
         ctm.scale(m_renderer.document().deviceScaleFactor());
+        if (!m_renderer.document().isSVGDocument())
+            ctm.scale(m_renderer.style().effectiveZoom());
         return narrowPrecisionToFloat(std::hypot(ctm.xScale(), ctm.yScale()) / sqrtOfTwoDouble);
     }
 
